# DjangoProject

./: .env.sample  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog.html  blog_delete.html  blog_form.html  home.html
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status.py  0003_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  category_products.html  contact.html  contacts.html  home.html  product_create.html  product_delete.html  product_detail.html
catalog/templates/includes/: footer.html  inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_group_fixture.py  create_groups.py  createadmin.py
users/migrations/: 0001_initial.py  0002_remove_customsuser_username.py
users/templates/: login.html  register.html
